# chathub

./: .gitignore  README.md
backend/: .env.example  app.db  pyproject.toml
backend/src/: config.py  database.py  main.py
backend/src/api/: auth.py
backend/src/models/: user.py
backend/src/repositories/: user_repository.py
backend/src/schemas/: user.py
backend/src/services/: user_service.py
backend/src/sockets/: ws.py
